Changes from crowd

--- a/config/email_templates/2019-10/email.html
+++ b/config/email_templates/2019-10/email.html
@@ -73,11 +73,11 @@
                               <div style="font-family:Lucida Grande, Verdana, Geneva, sans-serif; font-size:1em; line-height:1.5em; color:#000000">
 
                               <!-- !message_body-->
-<p>Dear [% username %]:</p>
+<p>Dear [% username %],</p>
 
-<p>The Archive of Our Own is the 2019 winner of the Hugo Award for Best Related Work! Your help and contributions, no matter how big or small, allow us to continue to maintain and improve the Archive. If you can, please continue to support the Archive, and all the projects that make up the Organization of Transformative Works (OTW) by <a href="https://otw.news/8b64d" style="color:#990000; text-decoration:underline">making a donation today</a>.</p>
+<p>The Archive of Our Own is the 2019 winner of the Hugo Award for Best Related Work! Your help and contributions, no matter how big or small, allow us to continue to maintain and improve the Archive. If you can, please continue to support the AO3, and all the projects that make up the Organization for Transformative Works (OTW), by <a href="https://otw.news/8b64d" style="color:#990000; text-decoration:underline">making a donation today</a>.</p>
 
-<p>In celebration of our Hugo Award, we have a couple of special thank-you gifts: for a donation of US$40, we have a set of Hugo-themed stickers, and a US$75 donation will net you an enamel pin with a special edit to the AO3 logo! We also have a new AO3-branded premium, a duffel bag measuring 10" x 19" x 9.75" for all your carrying needs!</p>
+<p>In celebration of our Hugo Award, we have a couple of special thank-you gifts: for a donation of US$40, we have a set of Hugo-themed stickers, and a US$75 donation will net you an enamel pin with a special edit to the AO3 logo! We also have a new AO3-branded premium: a duffel bag for all your carrying needs!</p>
 
 <p>Want to double your contribution? Ask your employer about charitable donation matching and increase your impact! Want one of our thank-you gifts, but you can't afford to donate the whole amount at once? Set up <a href="https://otw.news/7f693" style="color:#990000; text-decoration:underline">a recurring donation</a> and donate a little at a time to save towards the thank-you gift of your choice.</p>
 
