Correct org name and contact link in HTML email

--- a/config/email_templates/2020-04/email.html
+++ b/config/email_templates/2020-04/email.html
@@ -75,13 +75,13 @@
                               <!-- !message_body-->
 <p>Dear [% username %],</p>
 
-<p>During these unique times, many of you have been using the Archive to discover new fanworks and maybe even fandoms. Your help and contributions, no matter how big or small, allow us to continue to maintain and improve the Archive. If you can, please continue to support AO3 and all the projects that make up the Organization of Transformative Works by <a href="http://otw.news/ao3-email-donate" style="color:#990000; text-decoration:underline">making a donation</a> today.</p>
+<p>During these unique times, many of you have been using the Archive to discover new fanworks and maybe even fandoms. Your help and contributions, no matter how big or small, allow us to continue to maintain and improve the Archive. If you can, please continue to support AO3 and all the projects that make up the Organization for Transformative Works by <a href="http://otw.news/ao3-email-donate" style="color:#990000; text-decoration:underline">making a donation</a> today.</p>
 
 <p>For those who are in the position to financially support the OTW at this time, we have new thank you gifts: for a donation of US$40, we have a themed sticker set, unique to this drive, which includes a sticker to mark the new year and a citrus-scale sticker that pays tribute to the days before tagging. A US$75 donation will net you a water bottle that displays all the current projects of the OTW.</p>
 
 <p>Want one of our thank-you gifts, but you can't afford to donate the whole amount at once? Set up <a href="http://otw.news/ao3-email-recur" style="color:#990000; text-decoration:underline">a recurring donation</a> and donate a little at a time to save towards the thank-you gift of your choice. And remember that we accept donations year round  for those who may be able to donate at a later time.</p>
 
-<p>If you have already donated, we sincerely thank you! For any questions regarding your donation, please feel free to <a href="http://transformativeworks.org/contact_us/contact-development-and-membership" style="color:#990000; text-decoration:underline">contact the Development & Membership committee</a>.</p>
+<p>If you have already donated, we sincerely thank you! For any questions regarding your donation, please feel free to <a href="http://transformativeworks.org/contact_us/" style="color:#990000; text-decoration:underline">contact the Development & Membership committee</a>.</p>
 
 <p>Thank you from all of us at the Archive of Our Own and the Organization for Transformative Works.</p>
 
